--- a/hakedis_detay.html
+++ b/hakedis_detay.html
@@ -16,19 +16,10 @@
 
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
         <div class="col-md-6 mx-auto my-5">
-          <h1 class="display-3 fw-bold">SATINALMA</h1>
-          <h3 class="fw-normal text-muted mb-3"> <strong style="color: crimson;">Satınalmaya</strong> dair dokumanlara aşağıdan ulaşabilirsiniz.</h3>
+          <h1 class="display-3 fw-bold">HAKEDİŞ</h1>
+          <h3 class="fw-normal text-muted mb-3"> <strong style="color: crimson;">Hakedişe</strong> dair dokumanlara aşağıdan ulaşabilirsiniz.</h3>
           
         </div>
-      </div>
-
-      <div class=" contact-area d-flex flex-column flex-md-row p-3 gap-3 py-md-3 align-items-center justify-content-center">
-        <i class="fas fa-info-circle" style="font-size: 50px; margin-top: 0px;"></i>
-        <p style="margin: 20px 0; text-align: center; ">
-            Talep edilecek malzeme bulunamadığı durumda sisteme tanımlama yapılabilmesi için 
-                    <a href="assets/documents/Cevahir Malzeme Talep Formu.xlsx" download="Cevahir Malzeme Talep Formu.xlsx">dokumanı</a> doldurarak
-                    <strong><a href="mailto:ifs.destek@cevahiryapi.com?cc=pelinsu.yildiran@cevahiryapi.com&subject=Malzeme%20%20Tanımlaması">ifs.destek@cevahiryapi.com</a></strong> adresine ileterek ekletebilirsiniz.
-                </p>
       </div>
 
    
@@ -41,17 +32,9 @@
                 <th>Eğitim Videosu</th>
             </tr>
             <tr>
-                <td>SATINALMA - Talep Girişi</td>
-                <td><a href="assets/documents/IFS-ST-01.pdf" target="_blank">IFS-ST-01</a></td>
+                <td>HAKEDİŞ - Hakediş Girişi</td>
+                <td><a href="assets/documents/IFS-HK-01.pdf" target="_blank">IFS-HK-01</a></td>
                 <td><a href="https://www.youtube.com/watch?v=i93Ql6AcPW4" target="_blank">Video</a></td>
-            </tr>
-
-           
-
-            <tr>
-                <td>SATINALMA - Teklif Girişi ve Siparişe Dönüştürme</td>
-                <td><a href="assets/documents/IFS-ST-02.pdf" target="_blank">IFS-ST-02</a></td>
-                <td><a href="assets/documents/ERP SÜREÇ DİAGRAMI_02.02.2024.pdf" target="_blank">Video</a></td>
             </tr>
         </table>
     </div>
