--- a/merkez_ofis.html
+++ b/merkez_ofis.html
@@ -54,11 +54,12 @@
         </div>
       </a>
 
-      <a href="" style="text-decoration: none;">
+      
+      <a href="hakedis_detay.html" style="text-decoration: none;">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">IK</h3>
+              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Hakediş</h3>
             </div>
           </div>
         </div>
