--- a/santiye.html
+++ b/santiye.html
@@ -20,36 +20,91 @@
     </div>
    
     <div class="container">
-        <h1>Satın Alma Talebi</h1>
+        <h1>Genel IFS Kullanımı</h1>
         <table>
             <tr>
                 <th>Konu</th>
-                <th>Doküman No</th>
-                <th>Eğitim Videosu</th>
+                <th>Kılavuz</th>
             </tr>
             <tr>
-                <td>SATINALMA - Talep Girişi</td>
-                <td><a href="assets/documents/IFS-ST-01.pdf" target="_blank">IFS-ST-01</a></td>
-                <td><a href="https://www.youtube.com/watch?v=i93Ql6AcPW4" target="_blank">Video</a></td>
-            </tr>
-        </table>
-    </div>
-
-    <div class="container">
-        <h1>Bakım Teklifi</h1>
-        <table>
-            <tr>
-                <th>Konu</th>
-                <th>Doküman No</th>
-                <th>Eğitim Videosu</th>
-            </tr>
-            <tr>
-                <td>BakımMod - Araç Girişi </td>
+                <td>IFS Kurulumu</td>
                 <td><a href="https://example.com/link1" target="_blank">Doküman</a></td>
-                <td><a href="https://www.youtube.com/watch?v=i93Ql6AcPW4" target="_blank">Video</a></td>
+            </tr>
+            <tr>
+                <td>Kullanıcı Girişi & Şifre Değişikliği</td>
+                <td><a href="https://example.com/link3" target="_blank">Doküman</a></td>
             </tr>
         </table>
     </div>
+  
+  
+      <div class=" px-4 mx-auto text-center">
+        <p class="lead mb-6">Aşağıdaki alandan biriminizi seçerek ilgili kullanım dokumanlarına ulaşabilirsiniz. </p>
+      </div>
+      
+        <a href="satinalma_detay.html" style="text-decoration: none;">
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5" style=" margin-left: 10px; margin-right: 10px;">
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Satınalma</h3>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="hakedis_detay.html" style="text-decoration: none;">
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Hakediş</h3>
+              </div>
+            </div>
+          </div>
+        </a>
+  
+        <a href="" style="text-decoration: none;">
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Depo Yönetimi</h3>
+              </div>
+            </div>
+          </div>
+        </a>
+  
+        <a href="Muhasebe_detay.html" style="text-decoration: none;">
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Muhasebe</h3>
+              </div>
+            </div>
+          </div>
+        </a>
+  
+        <a href="" style="text-decoration: none;">
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">IK</h3>
+              </div>
+            </div>
+          </div>
+        </a>
+  
+        <a href="" style="text-decoration: none;">
+          <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
+              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Bakım</h3>
+              </div>
+            </div>
+          </div>
+        </a>
+  
+  
+      </div>
     
 
     <footer>
