--- a/hakedis_detay.html
+++ b/hakedis_detay.html
@@ -16,8 +16,8 @@
 
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
         <div class="col-md-6 mx-auto my-5">
-          <h1 class="display-3 fw-bold">HAKEDİŞ</h1>
-          <h3 class="fw-normal text-muted mb-3"> <strong style="color: crimson;">Hakedişe</strong> dair dokumanlara aşağıdan ulaşabilirsiniz.</h3>
+          <h1 class="display-3 fw-bold">Teknik Ofis</h1>
+          <h3 class="fw-normal text-muted mb-3"> <strong style="color: crimson;">Teknik Ofise</strong> dair dokumanlara aşağıdan ulaşabilirsiniz.</h3>
           
         </div>
       </div>
@@ -29,12 +29,10 @@
             <tr>
                 <th>Konu</th>
                 <th>Doküman No</th>
-                <th>Eğitim Videosu</th>
             </tr>
             <tr>
                 <td>HAKEDİŞ - Hakediş Girişi</td>
                 <td><a href="assets/documents/IFS-HK-01.pdf" target="_blank">IFS-HK-01</a></td>
-                <td><a href="https://www.youtube.com/watch?v=i93Ql6AcPW4" target="_blank">Video</a></td>
             </tr>
         </table>
     </div>
