--- a/merkez_ofis.html
+++ b/merkez_ofis.html
@@ -28,12 +28,8 @@
               <th>Kılavuz</th>
           </tr>
           <tr>
-              <td>IFS Kurulumu</td>
-              <td><a href="https://example.com/link1" target="_blank">Doküman</a></td>
-          </tr>
-          <tr>
-              <td>Kullanıcı Girişi & Şifre Değişikliği</td>
-              <td><a href="https://example.com/link3" target="_blank">Doküman</a></td>
+              <td>IFS Kurulumu ve Girişi</td>
+              <td><a href="assets/documents/IFS Kurulum Dokümanı.pdf" target="_blank">Doküman</a></td>
           </tr>
       </table>
   </div>
@@ -59,52 +55,11 @@
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Hakediş</h3>
+              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Teknik Ofis</h3>
             </div>
           </div>
         </div>
       </a>
-
-      <a href="Muhasebe_detay.html" style="text-decoration: none;">
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Muhasebe</h3>
-            </div>
-          </div>
-        </div>
-      </a>
-
-      <a href="" style="text-decoration: none;">
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Finans</h3>
-            </div>
-          </div>
-        </div>
-      </a>
-
-      <a href="" style="text-decoration: none;">
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Planlama</h3>
-            </div>
-          </div>
-        </div>
-      </a>
-
-      <a href="" style="text-decoration: none;">
-        <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-              <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">IT</h3>
-            </div>
-          </div>
-        </div>
-      </a>
-
 
     </div>
     <footer>
