--- a/santiye.html
+++ b/santiye.html
@@ -20,21 +20,17 @@
     </div>
    
     <div class="container">
-        <h1>Genel IFS Kullanımı</h1>
-        <table>
-            <tr>
-                <th>Konu</th>
-                <th>Kılavuz</th>
-            </tr>
-            <tr>
-                <td>IFS Kurulumu</td>
-                <td><a href="https://example.com/link1" target="_blank">Doküman</a></td>
-            </tr>
-            <tr>
-                <td>Kullanıcı Girişi & Şifre Değişikliği</td>
-                <td><a href="https://example.com/link3" target="_blank">Doküman</a></td>
-            </tr>
-        </table>
+      <h1>Genel IFS Kullanımı</h1>
+      <table>
+          <tr>
+              <th>Konu</th>
+              <th>Kılavuz</th>
+          </tr>
+          <tr>
+              <td>IFS Kurulumu ve Girişi</td>
+              <td><a href="assets/documents/IFS Kurulum Dokümanı.pdf" target="_blank">Doküman</a></td>
+          </tr>
+      </table>
     </div>
   
   
@@ -42,7 +38,7 @@
         <p class="lead mb-6">Aşağıdaki alandan biriminizi seçerek ilgili kullanım dokumanlarına ulaşabilirsiniz. </p>
       </div>
       
-        <a href="satinalma_detay.html" style="text-decoration: none;">
+        <a href="satinalma_detay_santiye.html" style="text-decoration: none;">
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5" style=" margin-left: 10px; margin-right: 10px;">
           <div class="col">
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
@@ -57,53 +53,11 @@
           <div class="col">
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Hakediş</h3>
+                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Teknik Ofis</h3>
               </div>
             </div>
           </div>
         </a>
-  
-        <a href="" style="text-decoration: none;">
-          <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Depo Yönetimi</h3>
-              </div>
-            </div>
-          </div>
-        </a>
-  
-        <a href="Muhasebe_detay.html" style="text-decoration: none;">
-          <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-              <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Muhasebe</h3>
-              </div>
-            </div>
-          </div>
-        </a>
-  
-        <a href="" style="text-decoration: none;">
-          <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">IK</h3>
-              </div>
-            </div>
-          </div>
-        </a>
-  
-        <a href="" style="text-decoration: none;">
-          <div class="col">
-            <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-              <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Bakım</h3>
-              </div>
-            </div>
-          </div>
-        </a>
-  
-  
       </div>
     
 
